# Corr-match

./: .gitignore  .pre-commit-config.yaml  README.md  mac-env.yaml  pyproject.toml
corr_match/: config.py  experiment.py  main.py  sift.py
corr_match/configs/hydra/: hydra.yaml
spads/: config.py  experiment.py  main.py  sim_photon.py
spads/configs/: config.yaml
spads/configs/hydra/: hydra.yaml
spads/corr_match/: __init__.py  sift.py
spads/data_gen/: __init__.py  sim.py
spads/inpainting/: __init__.py  diff_inpaint.py
tests/: test_experiment.py  test_main.py
